--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@tanstack/react-query": "^5.7.2",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
